# SciXIngestEnrichment

./: README.md  pyproject.toml
scixenrich/: bibcodes.py  data.py  exceptions.py  references.py  utils.py
